--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: '3.7'
 
 services:
   web:
@@ -10,3 +10,9 @@ services:
       - 8000:8000
     env_file:
       - ./.env
+  db:
+    image: postgres:12
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+  volumes:
+    postgres_data:
